--- a/Sentinel/Sentinel-Info.plist
+++ b/Sentinel/Sentinel-Info.plist
@@ -12,6 +12,7 @@
 	<array>
 		<string>apple-touch-icon copy.png</string>
 		<string>apple-touch-icon copy 2.png</string>
+		<string>apple-touch-icon copy2.png</string>
 	</array>
 	<key>CFBundleIcons</key>
 	<dict>
@@ -21,6 +22,7 @@
 			<array>
 				<string>apple-touch-icon copy.png</string>
 				<string>apple-touch-icon copy 2.png</string>
+				<string>apple-touch-icon copy2.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<false/>
@@ -35,11 +37,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.8</string>
+	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.8</string>
+	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
