--- a/Sentinel/Sentinel-Info.plist
+++ b/Sentinel/Sentinel-Info.plist
@@ -22,6 +22,8 @@
 				<string>Icon2013.png</string>
 				<string>Iconsmall2013.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -42,6 +44,8 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
